[package]
name = "gio-futures"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = { git = "https://github.com/gtk-rs/gtk-rs" }
futures = "0.3"
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
pin-project = "0.4"
